stdout
compiling CircularBufferTest.cpp
CircularBufferTest.cpp: In member function 'virtual void TEST_GROUP_CppUTestGroupCircularBuffer::setup()':
CircularBufferTest.cpp:19:39: error: too few arguments to function 'CircularBuffer* CircularBuffer_Create(int, int)'
   19 |         buffer = CircularBuffer_Create(2);
      |                  ~~~~~~~~~~~~~~~~~~~~~^~~
compilation terminated due to -Wfatal-errors.
make: *** [/cpputest/build/MakefileWorker.mk:520: objs/CircularBufferTest.o] Error 1
